--- a/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
+++ b/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
@@ -4,14 +4,18 @@
 
 
 
-        <div class="row py-3">
+        <div class="row pt-3">
             <div class="col-lg-9 col-sm-12">
                 <div class="heading">Deceased Customers</div>
             </div>
             <div class="col-lg-3 col-sm-12 self-center">
                 <p class="text-right">
-                    <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                        <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                    <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                    color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                    aria-expanded="false" aria-controls="collapseExample">
+                        <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
+                        <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
+                        Advance Filter
                     </button>
                   </p>
             </div>
@@ -21,7 +25,7 @@
 
 
 
-          <div class="collapse" id="collapseExample">
+          <div class="collapse show" id="collapseExample">
             <div class="card card-body">
                 <div class="flex" style="flex-wrap: wrap;">
                     <app-zone-branch-circle [form]="customerForm" [should_show_circle]="false"
