--- a/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
+++ b/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
@@ -1,16 +1,17 @@
 ]
 <div class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-scroll bg-card dark:bg-transparent">
 
-    <div class="row py-3">
+    <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
             <div class="heading">API Logs</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center mt-2 ">
             <p class="text-right">
-                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
-                        color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-                        aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon class="mr-2">filter_list</mat-icon>
+                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
+                    <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
                     Advance Filter
                 </button>
             </p>
@@ -20,7 +21,7 @@
     <!-- Header -->
 
 
-    <div class="collapse" id="collapseExample">
+    <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <div class="" [formGroup]="FilterForm">
 
@@ -32,7 +33,7 @@
                                 <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search"
                                        autocomplete="off"
                                        appearance="outline">
-                                <mat-hint align="start"><strong>Search</strong> in all fields</mat-hint>
+                                <!-- <mat-hint align="start"><strong>Search</strong> in all fields</mat-hint> -->
                             </mat-form-field>
                         </div>
                     </div>
@@ -78,8 +79,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                            <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
-                                    aria-controls="collapseExample" mat-raised-button
+                            <button mat-raised-button
                                     class="mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-gray-500 mt-2"
                                     type="button" (click)="loadApiLogs()">
                                 <mat-icon class="mr-2">search</mat-icon>
