--- a/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
+++ b/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
@@ -1,14 +1,18 @@
 <div class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
 
 
-    <div class="row py-3">
+    <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
             <div class="heading">Request for Reschedulement of Loan Installment</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
-                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
+                    <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
+                    Advance Filter
                 </button>
               </p>
         </div>
@@ -18,7 +22,7 @@
 
 
 
-      <div class="collapse" id="collapseExample">
+      <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <div  [formGroup]="RfrlForm">
 
@@ -74,7 +78,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-12">
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
         
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Cnic <strong class="matMandatory">*</strong></mat-label>
@@ -124,7 +128,7 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-12">
+                    <div class="col-lg-3 col-sm-12 " *ngIf="graceMonthsSelect">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" *ngIf="graceMonthsSelect">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Grace Months <strong class="matMandatory">*</strong></mat-label>
@@ -147,7 +151,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 ">
-                            <button class="bg-gray-500" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Search</button>
+                            <button class="bg-gray-500 mt-2"  mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Search</button>
                         </div>
                     </div>
                 </div>
