--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
@@ -1,174 +1,192 @@
-
-<div class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+<div
+    class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
 
 
     <div class="row pt-3">
-      <div class="col-lg-9 col-sm-12">
-          <div class="heading">Get Village Benchmarking</div>
-      </div>
-      <div class="col-lg-3 col-sm-12 self-center">
-          <p class="text-right">
-            <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
-            color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-            aria-expanded="false" aria-controls="collapseExample">
-        <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
-        <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
-        Advance Filter
-    </button>
+        <div class="col-lg-9 col-sm-12">
+            <div class="heading">Get Village Benchmarking</div>
+        </div>
+        <div class="col-lg-3 col-sm-12 self-center">
+            <p class="text-right">
+                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                        color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                        aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
+                    <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
+                    Advance Filter
+                </button>
             </p>
-      </div>
-  </div>
+        </div>
+    </div>
 
-  <!-- Header -->
-
+    <!-- Header -->
 
 
     <div class="collapse show" id="collapseExample">
-      <div class="card card-body">
-        <div class="py-2" [formGroup]="getVillageBenchmarkForm">
+        <div class="card card-body">
+            <div class="py-2" [formGroup]="getVillageBenchmarkForm">
 
 
+                <div class="flex" style="flex-wrap: wrap;">
+                    <app-zone-branch-circle [form]="getVillageBenchmarkForm" [should_show_circle]="true"
+                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+                    <div class="mx-2">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
 
-          <div class="flex" style="flex-wrap: wrap;">
-              <app-zone-branch-circle [form]="getVillageBenchmarkForm" [should_show_circle]="true"
-                                      (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
-                <div class="mx-2">
-                  <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-
-                      <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                          <mat-label class="customMatLabel">Village Name</mat-label>
-                          <input matInput placeholder="Enter Village Name" formControlName="VillageName" maxlength="30" autocomplete="off" />
-                        </mat-form-field>
-                  </div>
-              </div>
-              <div class="mx-2">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-
-                        <button  mat-raised-button class="bg-gray-500 mat-primary"
-                                type="button" (click)="search()"><mat-icon class="mr-2">search</mat-icon> Search</button>
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label class="customMatLabel">Village Name</mat-label>
+                                <input matInput placeholder="Enter Village Name" formControlName="VillageName"
+                                       maxlength="30" autocomplete="off"/>
+                            </mat-form-field>
+                        </div>
                     </div>
+                    <div class="mx-2">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+
+                            <button mat-raised-button class="bg-gray-500 mat-primary"
+                                    type="button" (click)="search()">
+                                <mat-icon class="mr-2">search</mat-icon>
+                                Search
+                            </button>
+                        </div>
+                    </div>
+
                 </div>
-
-          </div>
-      </div>
-      </div>
+            </div>
+        </div>
     </div>
-
 
 
     <!-- Header -->
 
-    <div class="mat-table__wrapper overflow-y-scroll border shadow-xs rounded-sm bg-gray-50" [style.height]="gridHeight"  >
+    <div class="mat-table__wrapper overflow-y-scroll border shadow-xs rounded-sm bg-gray-50"
+         [style.height]="gridHeight">
         <!--[style.height]="gridHeight"-->
         <mat-table
-                   #table
-                   [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems}"
-                   matSort
-                   #sort1="matSort"
-                   matSortActive="id"
-                   matSortDirection="asc"
-                   matSortDisableClear>
+            #table
+            [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems}"
+            matSort
+            #sort1="matSort"
+            matSortActive="id"
+            matSortDirection="asc"
+            matSortDisableClear>
             CircleCode
 
             <ng-container matColumnDef="CircleCode">
                 <mat-header-cell class="place-content-center" *matHeaderCellDef>Circle Code.</mat-header-cell>
-                <mat-cell class="place-content-center" *matCellDef="let VillageBenchMark">{{VillageBenchMark.CircleCode}}</mat-cell>
+                <mat-cell class="place-content-center"
+                          *matCellDef="let VillageBenchMark">{{VillageBenchMark.CircleCode}}</mat-cell>
             </ng-container>
 
-          <ng-container matColumnDef="VillageName">
-            <mat-header-cell class="place-content-center" *matHeaderCellDef>Village Name</mat-header-cell>
-            <mat-cell class="place-content-center" *matCellDef="let VillageBenchMark">{{VillageBenchMark.VillageName}}</mat-cell>
-          </ng-container>
+            <ng-container matColumnDef="VillageName">
+                <mat-header-cell class="place-content-center" *matHeaderCellDef>Village Name</mat-header-cell>
+                <mat-cell class="place-content-center"
+                          *matCellDef="let VillageBenchMark">{{VillageBenchMark.VillageName}}</mat-cell>
+            </ng-container>
 
 
-
-          <ng-container matColumnDef="FarmSize">
-            <mat-header-cell class="place-content-center" *matHeaderCellDef>Farm Size</mat-header-cell>
-            <mat-cell class="place-content-center" *matCellDef="let VillageBenchMark">{{VillageBenchMark.FarmSize}}</mat-cell>
-          </ng-container>
+            <ng-container matColumnDef="FarmSize">
+                <mat-header-cell class="place-content-center" *matHeaderCellDef>Farm Size</mat-header-cell>
+                <mat-cell class="place-content-center"
+                          *matCellDef="let VillageBenchMark">{{VillageBenchMark.FarmSize}}</mat-cell>
+            </ng-container>
 
             <ng-container matColumnDef="NoOfFarmer">
                 <mat-header-cell class="place-content-center" *matHeaderCellDef>No Of Farmers</mat-header-cell>
-                <mat-cell class="place-content-center" *matCellDef="let VillageBenchMark">{{VillageBenchMark.NoOfFarmer}}</mat-cell>
+                <mat-cell class="place-content-center"
+                          *matCellDef="let VillageBenchMark">{{VillageBenchMark.NoOfFarmer}}</mat-cell>
             </ng-container>
 
-          <ng-container matColumnDef="MaleCount">
-            <mat-header-cell class="place-content-center" *matHeaderCellDef>Male Count</mat-header-cell>
-            <mat-cell class="place-content-center" *matCellDef="let VillageBenchMark">{{VillageBenchMark.MaleCount}}</mat-cell>
-          </ng-container>
+            <ng-container matColumnDef="MaleCount">
+                <mat-header-cell class="place-content-center" *matHeaderCellDef>Male Count</mat-header-cell>
+                <mat-cell class="place-content-center"
+                          *matCellDef="let VillageBenchMark">{{VillageBenchMark.MaleCount}}</mat-cell>
+            </ng-container>
 
             <ng-container matColumnDef="FemaleCount">
                 <mat-header-cell class="place-content-center" *matHeaderCellDef>Female Count</mat-header-cell>
-                <mat-cell class="place-content-center" *matCellDef="let VillageBenchMark">{{VillageBenchMark.FemaleCount}}</mat-cell>
+                <mat-cell class="place-content-center"
+                          *matCellDef="let VillageBenchMark">{{VillageBenchMark.FemaleCount}}</mat-cell>
             </ng-container>
 
-          <ng-container matColumnDef="TransGenderCount">
-            <mat-header-cell class="place-content-center" *matHeaderCellDef>TransGender Count</mat-header-cell>
-            <mat-cell class="place-content-center" *matCellDef="let VillageBenchMark">{{VillageBenchMark.TransGenderCount}}</mat-cell>
-          </ng-container>
+            <ng-container matColumnDef="TransGenderCount">
+                <mat-header-cell class="place-content-center" *matHeaderCellDef>TransGender Count</mat-header-cell>
+                <mat-cell class="place-content-center"
+                          *matCellDef="let VillageBenchMark">{{VillageBenchMark.TransGenderCount}}</mat-cell>
+            </ng-container>
 
-          <ng-container matColumnDef="AverageLoanSize">
-            <mat-header-cell class="place-content-center" *matHeaderCellDef>Average Loan Size</mat-header-cell>
-            <mat-cell class="place-content-center" *matCellDef="let VillageBenchMark">{{VillageBenchMark.AverageLoanSize}}</mat-cell>
-          </ng-container>
+            <ng-container matColumnDef="AverageLoanSize">
+                <mat-header-cell class="place-content-center" *matHeaderCellDef>Average Loan Size</mat-header-cell>
+                <mat-cell class="place-content-center"
+                          *matCellDef="let VillageBenchMark">{{VillageBenchMark.AverageLoanSize}}</mat-cell>
+            </ng-container>
 
-          <ng-container matColumnDef="AgriBusinessPotential">
-            <mat-header-cell class="place-content-center text-center" *matHeaderCellDef >Agri Business Potential</mat-header-cell>
-            <mat-cell *matCellDef="let VillageBenchMark" class="place-content-center" style="width: 50px; text-align:center;">
-              <div class="w-28 text-center">
-                <div class="w-full break-words text-center">
-                  {{VillageBenchMark.AgriBusinessPotential}}
-                </div>
-              </div>
-              </mat-cell>
-          </ng-container>
+            <ng-container matColumnDef="AgriBusinessPotential">
+                <mat-header-cell class="place-content-center text-center" *matHeaderCellDef>Agri Business Potential
+                </mat-header-cell>
+                <mat-cell *matCellDef="let VillageBenchMark" class="place-content-center"
+                          style="width: 50px; text-align:center;">
+                    <div class="w-28 text-center">
+                        <div class="w-full break-words text-center">
+                            {{VillageBenchMark.AgriBusinessPotential}}
+                        </div>
+                    </div>
+                </mat-cell>
+            </ng-container>
 
-          <ng-container matColumnDef="Delete">
-            <mat-header-cell class="place-content-center text" *matHeaderCellDef>Action</mat-header-cell>
-            <mat-cell class="place-content-center" *matCellDef="let VillageBenchMark">
-                <button style="margin-left: 5px" mat-icon-button *ngIf="checkEditStatus(VillageBenchMark)" color="primary" (click)="editVillageBenchMark(VillageBenchMark)">
-                    <mat-icon title="edit benchmarking">edit</mat-icon>
-                </button>
-                <button style="margin-left: 5px" mat-icon-button *ngIf="checkDeleteStatus(VillageBenchMark)" color="primary" (click)="deleteVillageBenchMark(VillageBenchMark)">
-                <mat-icon title="Delete benchmarking">delete</mat-icon>
-              </button>
+            <ng-container matColumnDef="Delete">
+                <mat-header-cell class="place-content-center text" *matHeaderCellDef>Action</mat-header-cell>
+                <mat-cell class="place-content-center" *matCellDef="let VillageBenchMark">
+                    <button style="margin-left: 5px" mat-icon-button *ngIf="checkEditStatus(VillageBenchMark)"
+                            color="primary" (click)="editVillageBenchMark(VillageBenchMark)">
+                        <mat-icon title="edit benchmarking">edit</mat-icon>
+                    </button>
+                    <button style="margin-left: 5px" mat-icon-button *ngIf="checkViewStatus(VillageBenchMark)"
+                            color="primary" (click)="viewVillageBenchMark(VillageBenchMark)">
+                        <mat-icon title="edit benchmarking">visibility</mat-icon>
+                    </button>
+                    <button style="margin-left: 5px" mat-icon-button *ngIf="checkDeleteStatus(VillageBenchMark)"
+                            color="primary" (click)="deleteVillageBenchMark(VillageBenchMark)">
+                        <mat-icon title="Delete benchmarking">delete</mat-icon>
+                    </button>
 
-                <button style="margin-left: 5px" mat-icon-button *ngIf="checkMap(VillageBenchMark)" color="primary" (click)="viewMap(VillageBenchMark)">
-                    <mat-icon title="view benchmarking">location_on</mat-icon>
-                </button>
+                    <button style="margin-left: 5px" mat-icon-button *ngIf="checkMap(VillageBenchMark)" color="primary"
+                            (click)="viewMap(VillageBenchMark)">
+                        <mat-icon title="view benchmarking">location_on</mat-icon>
+                    </button>
 
-            </mat-cell>
+                </mat-cell>
 
 
-          </ng-container>
+            </ng-container>
 
-          <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;" class="table-header-background"></mat-header-row>
+            <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;"
+                            class="table-header-background"></mat-header-row>
 
-          <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
 
         </mat-table>
-
-
-
 
 
         <!-- <div class="mat-table__message" *ngIf="!loading && !matTableLenght">No records found</div>
         <div class="mat-table__message" *ngIf="loading">Please wait....</div> -->
 
-      </div>
-      <div *ngIf="matTableLenght" class=" pt-4 mat-select" style="padding:5px;">
+    </div>
+    <div *ngIf="matTableLenght" class=" pt-4 mat-select" style="padding:5px;">
         Items per page:
-        <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)" style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
-          <mat-option [value]="5">5</mat-option>
-          <mat-option [value]="10">10</mat-option>
-          <mat-option [value]="25">25</mat-option>
-          <mat-option [value]="50">50</mat-option>
-          <mat-option [value]="100">100</mat-option>
+        <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
+                    style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
+            <mat-option [value]="5">5</mat-option>
+            <mat-option [value]="10">10</mat-option>
+            <mat-option [value]="25">25</mat-option>
+            <mat-option [value]="50">50</mat-option>
+            <mat-option [value]="100">100</mat-option>
         </mat-select>
         <button (click)="paginate(1)">First</button>
-        <pagination-controls display="inline" (pageChange)="paginate($event)" style="display: inline-block;"></pagination-controls>
+        <pagination-controls display="inline" (pageChange)="paginate($event)"
+                             style="display: inline-block;"></pagination-controls>
         <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
         <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
 
-      </div>
+    </div>
 </div>
